kubernetes/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatgpt
  labels:
    app: chatgpt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatgpt
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: chatgpt
    spec:
      containers:
        - image: zhengshuilong/chatgpt
          name: chatgpt
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 300m
              memory: 300Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: chatgpt
  name: chatgpt
spec:
  ports:
    - name: chatgpt
      port: 3002
      protocol: TCP
      targetPort: 3002
  selector:
    app: chatgpt
  type: ClusterIP
